[package]
name = "es51986"
version = "0.1.3"
edition = "2021"
description = "ES51986 data decoder library."
license = "Apache-2.0"
documentation = "https://github.com/ruimo/es51986"
homepage = "https://github.com/ruimo/es51986"
repository = "https://github.com/ruimo/es51986"

[dependencies]
env_logger = "0"
serde = { version = "1", features = ["derive"] }
